# obs-studio

./: .gitignore  .gitmodules  README.md
UI/: window-basic-auto-config.cpp  window-basic-auto-config.hpp  window-basic-main.cpp
build_script/: build.bat  build_app.py
cmake/Modules/: FindLibVPX.cmake
obs/: window-basic-settings.cpp
plugins/: CMakeLists.txt
plugins/ftl-services/: CMakeLists.txt  ftl-beam.c
plugins/ftl-services/data/: package.json  services.json
plugins/obs-outputs/: ftl-stream.c
plugins/obs-vpx/: CMakeLists.txt  obs-vpx-plugin-main.c  obs-vpx.c
plugins/obs-vpx/data/locale/: en-US.ini
plugins/rtmp-services/data/: services.json
